k8s/kustomize/environments/test/ingress.yaml
# --- Ingress Router pre TEST prostredie s SSL (HTTPS) ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  tls:
    - hosts:
        - test.adrianprogramuje.sk
      secretName: test-cert-secret
  rules:
    - host: test.adrianprogramuje.sk
      http:
        paths:
          # Smerovanie API na backend
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
          # Smerovanie na frontend (React)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
